# Django

./: app.py  pyproject.toml
sample/: catalog.html  category.html  contacts.html  index.html
