[tool.poetry]
name = "21-2"
version = "0.1.0"
description = ""
authors = ["Kira Fedotova <k.fedotova@it-park.tech>"]
readme = "README.md"
packages = [{include = "21"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
